@@ -35,7 +35,9 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
     amd64 and move files after the call to 'make install'. This fixes 
     the wrong dynamic linker path for libc objects.  (Closes: #325226)
   * Use sed and test in /etc/init.d/glibc.sh to compare kernel versions.
-    Partly fixes bug #325263.
+    Put the Debian architecture name in the script at build time instead
+    of using 'dpkg --print-architecture'. Thanks to Florent Bayle for 
+    the idea.  (Closes: #325802, #328088, #339482)
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
